--- a/blt.html
+++ b/blt.html
@@ -20,8 +20,7 @@
   <nav>
     <a href="home.html">HOME</a>
     <a href="blt.html">DAY</a>
-    <!--
-    <a href="wk.html">WEEK</a>
+    <!--    <a href="wk.html">WEEK</a>
      <a href="#">HOME</a>
   <a href="#">CATEGORIES</a>-->
     <a href="faq.html">FAQ</a> someone's calendar
