--- a/home.html
+++ b/home.html
@@ -62,6 +62,12 @@
     </ul>
 
     <ul class="days">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
       <li>1</li>
       <li>2</li>
       <li>3</li>
@@ -85,10 +91,8 @@
       <li>21</li>
       <li>22</li>
       <li>23</li>
-      <a href="blt.html">
-        <li><span class="active">24</span></li>
-      </a>
-      <li>25</li>
+      <li>24</li>
+      <a href="blt.html"><li><span class="active">25</span></li></a>
       <li>26</li>
       <li>27</li>
       <li>28</li>
