positioning of the sidebar

--- a/home.html
+++ b/home.html
@@ -12,7 +12,8 @@
 
   <a href="#">MONTH</a>
   <a href="#">CATEGORIES</a>-->
-    <a href="faq.html">FAQ</a> Your Calendar
+    <a href="faq.html">FAQ</a>
+    Your Calendar
     <div class="search-wrapper">
 
     </div>
@@ -55,7 +56,7 @@
       <li>Sunday</li>
       <li>Monday</li>
       <li>Tuesday</li>
-      <li>Wednsday</li>
+      <li>Wednesday</li>
       <li>Thursday</li>
       <li>Friday</li>
       <li>Saturday</li>
@@ -112,7 +113,7 @@
     <div class="header">
       <h1 class="tak">Tasks</h1>
       <input type="text" id="myInput" placeholder="Create a task...">
-      <span onclick="newElement()" class="addBtn">ADD TASK</span>
+      <span onclick="newElement()" title= "Add a Task" class="addBtn">ADD TASK</span>
     </div>
     <ul id="myUL">
       <li class="checked taskitem">Test 1 </li>
@@ -134,9 +135,9 @@
     </div>
     <div class="center-header">
       <span title="Create a Note" class="button create">NOTES+</span>
-      <span class="button done">&#10003</span>
+      <span class="Done Button">&#10003</span>
       <span title="Pick Note Color" class="button color">C</span>
-      <span title="Delete current Note" class="button delete">X</span>
+      <span title="Delete Current Note" class="button delete">X</span>
     </div>
     <div class="paper-container post">
       <textarea></textarea>
