--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
   <meta name="google-signin-client_id" content="398621332572-nhab6e6mk426c9ki64jaloisdbg723v2.apps.googleusercontent.com">
   <link rel="stylesheet" type="text/css" href="homeS.css">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
   <nav>
     <a href="home.html">HOME</a>
