trying to fix sign in

--- a/home.html
+++ b/home.html
@@ -13,16 +13,11 @@
 
   <a href="#">MONTH</a>
   <a href="#">CATEGORIES</a>-->
-    <a href="faq.html">FAQ</a> Your Calendar
-<<<<<<< HEAD
-=======
+    <a href="faq.html">FAQ</a>
+
     <yo align = "center"  >DotBook </yo>
 
->>>>>>> c482175790d17d06224953783eef724d563c5bdc
-    <div class="search-wrapper">
-
-    </div>
-    <div id="my-signin2" align="right"></div>
+    <div id="my-signin2" align="top"></div>
     <script>
       function onSuccess(googleUser) {
         console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
@@ -47,6 +42,10 @@
     </script>
     <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
     <div id = "name"></div>
+
+    <div class="search-wrapper">
+    </div>
+
   </nav>
 </head>
 
