--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,7 @@
     <a href="wk.html">WEEK</a>
   <a href="#">MONTH</a>
   <a href="#">CATEGORIES</a>-->
-    <a href="faq.html">FAQ</a> someone's calendar
+    <a href="faq.html">FAQ</a> Your calendar
     <div class="search-wrapper">
 
     </div>
