still trying to move button

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
   <nav>
+    <yo align = "center"  >DotBook </yo>
     <a href="home.html">HOME</a>
     <a href="blt.html">DAY</a>
 
@@ -14,19 +15,11 @@
 
   <a href="#">MONTH</a>
   <a href="#">CATEGORIES</a>-->
-<<<<<<< HEAD
     <a href="faq.html">FAQ</a>
 
-    <yo align = "center"  >DotBook </yo>
-=======
-    <a href="faq.html">FAQ</a> Your Calendar
 
-    <yo align = "center"  >DotBook </yo>
 
-    <div class="search-wrapper">
->>>>>>> 04f8a38164de563ac57897a97f146993105264dd
-
-    <div id="my-signin2" align="top"></div>
+    <div id="my-signin2" float="right"></div>
     <script>
       function onSuccess(googleUser) {
         console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
