--- a/wk.html
+++ b/wk.html
@@ -22,6 +22,7 @@
   <a href="#">CATEGORIES</a>-->
   <a href="faq.html">FAQ</a>
   someone's calendar
+  <yo align = "center"  >DotBook </yo>
   <div class="search-wrapper">
    </div>
 </nav>
