--- a/blt.html
+++ b/blt.html
@@ -25,7 +25,7 @@
      <a href="#">HOME</a>
   <a href="#">CATEGORIES</a>-->
     <a href="faq.html">FAQ</a> someone's calendar
-
+<yo align = "center"  >DotBook </yo>
     <div class="search-wrapper">
     </div>
   </nav>
