--- a/faq.html
+++ b/faq.html
@@ -23,7 +23,7 @@
     <div class="search-wrapper">
 
     </div>
-    <img src = "mavk.png" >
+    <!-- <img src = "mavk.png" > -->
 
   </nav>
   <meta name="viewport" content="width=device-width, initial-scale=1">
