--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="faq.css">
+  <link rel="stylesheet" type="text/css" href="about.css">
 
 
   <nav>
@@ -18,7 +18,7 @@
     <a href="wk.html">WEEK</a>
   <a href="#">MONTH</a>
   <a href="#">CATEGORIES</a>-->
-    <a href="faq.html">FAQ</a> someone's calendar
+    <a href="about.html">ABOUT</a> someone's calendar
     <yo align = "center"  >DotBook </yo>
     <div class="search-wrapper">
 
