--- a/wk.html
+++ b/wk.html
@@ -20,7 +20,7 @@
   <a href="#">WEEK</a>
   <a href="#">MONTH</a>
   <a href="#">CATEGORIES</a>-->
-  <a href="faq.html">FAQ</a>
+  <a href="about.html">ABOUT</a>
   someone's calendar
   <yo align = "center"  >DotBook </yo>
   <div class="search-wrapper">
