--- a/blt.html
+++ b/blt.html
@@ -24,7 +24,7 @@
     <!--    <a href="wk.html">WEEK</a>
      <a href="#">HOME</a>
   <a href="#">CATEGORIES</a>-->
-    <a href="faq.html">FAQ</a> someone's calendar
+    <a href="about.html">ABOUT</a> someone's calendar
 <yo align = "center"  >DotBook </yo>
     <div class="search-wrapper">
     </div>
