--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
   <a href="#">MONTH</a>
   <a href="#">CATEGORIES</a>-->
 
-    <a href="faq.html">FAQ</a> Your Calendar
+    <a href="about.html">ABOUT</a> Your Calendar
     <yo align = "center"  >DotBook </yo>
     <div id="my-signin2" align="top"></div>
     <script>
