--- a/blt.html
+++ b/blt.html
@@ -162,19 +162,34 @@
     <div id="drag-30" class="draggable stack6">
       <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="lightbulb icon">
     </div>
-    <!-- <div id="drag-31" class="draggable stack7">
-      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+    <div id="drag-31" class="draggable stack7">
+      <img class="hstk" src="panda!.png" alt="panda icon">
     </div>
     <div id="drag-32" class="draggable stack7">
-      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+      <img class="hstk" src="panda!.png" alt="panda icon">
     </div>
     <div id="drag-33" class="draggable stack7">
-      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+      <img class="hstk" src="panda!.png" alt="panda icon">
     </div>
     <div id="drag-34" class="draggable stack7">
-      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+      <img class="hstk" src="panda!.png" alt="panda icon">
     </div>
     <div id="drag-35" class="draggable stack7">
+      <img class="hstk" src="panda!.png" alt="panda icon">
+    </div>
+    <!-- <div id="drag-36" class="draggable stack8">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+    </div>
+    <div id="drag-37" class="draggable stack8">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+    </div>
+    <div id="drag-38" class="draggable stack8">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+    </div>
+    <div id="drag-39" class="draggable stack8">
+      <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
+    </div>
+    <div id="drag-40" class="draggable stack8">
       <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
     </div> -->
 </body>
