changed your to my

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <a href="wk.html">WEEK</a>
   <a href="#">MONTH</a>
   <a href="#">CATEGORIES</a>-->
-    <a href="about.html">ABOUT</a> someone's calendar
+    <a href="about.html">ABOUT</a>
     <yo align = "center"  >DotBook </yo>
     <div class="search-wrapper">
 
