--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
       <div class="center">
         <h4>Sources</h4>
       </div>
-      <div class="para">Images from: www.icons8.com, www.simpleicon.com, www.onlygfx.com, www.flaticon.com, www.myiconfinder.com </div>
+      <div class="para">Images from: www.icons8.com, www.simpleicon.com, www.onlygfx.com, www.flaticon.com, www.myiconfinder.com, and Emily Chang</div>
       <!-- <h3>Why won't this work?</h3>
  <p4>Our website is still under construction, so there will be a lot of bugs and errors. The inconvenience is only temporary, the website will be running smooth in a short while. </p4> -->
     </div>
