--- a/home.html
+++ b/home.html
@@ -2,8 +2,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-signin-client_id" content="398621332572-nhab6e6mk426c9ki64jaloisdbg723v2.apps.googleusercontent.com">
   <link rel="stylesheet" type="text/css" href="homeS.css">
-  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Acme|Handlee" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
   <nav>
     <yo align = "center"  >DotBook </yo>
@@ -15,7 +14,7 @@
 
   <a href="#">MONTH</a>
   <a href="#">CATEGORIES</a>-->
-    <a href="faq.html">FAQ</a>
+    <!-- <a href="faq.html">FAQ</a> -->
 
     <a href="about.html">ABOUT</a> Your Calendar
     <div id="my-signin2" align="top"></div>
@@ -149,12 +148,15 @@
         <span title="Pick Note Color" class="button color">C</span>
         <span title="Delete Current Note" class="button delete">X</span>
       </div>
-      <div class="paper-container post">
+      <!-- <div class="paper-container post"> -->
+      <div class="paper-container">
         <textarea></textarea>
       </div>
 
-      <div class="notes-list-container post">
-        <ul class="notes-list post"></ul>
+      <!-- <div class="notes-list-container post"> -->
+        <div class="notes-list-container">
+        <!-- <ul class="notes-list post"></ul> -->
+          <ul class="notes-list"></ul>
       </div>
     </div>
 </div>
