--- a/blt.html
+++ b/blt.html
@@ -163,19 +163,19 @@
       <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="lightbulb icon">
     </div>
     <div id="drag-31" class="draggable stack7">
-      <img class="hstk" src="panda!.png" alt="panda icon">
+      <img class="hstk" src="https://files.slack.com/files-pri/T677SKL4E-F6D3AQMTP/panda_.png" alt="panda icon">
     </div>
     <div id="drag-32" class="draggable stack7">
-      <img class="hstk" src="panda!.png" alt="panda icon">
+      <img class="hstk" src="https://files.slack.com/files-pri/T677SKL4E-F6D3AQMTP/panda_.png" alt="panda icon">
     </div>
     <div id="drag-33" class="draggable stack7">
-      <img class="hstk" src="panda!.png" alt="panda icon">
+      <img class="hstk" src="https://files.slack.com/files-pri/T677SKL4E-F6D3AQMTP/panda_.png" alt="panda icon">
     </div>
     <div id="drag-34" class="draggable stack7">
-      <img class="hstk" src="panda!.png" alt="panda icon">
+      <img class="hstk" src="https://files.slack.com/files-pri/T677SKL4E-F6D3AQMTP/panda_.png" alt="panda icon">
     </div>
     <div id="drag-35" class="draggable stack7">
-      <img class="hstk" src="panda!.png" alt="panda icon">
+      <img class="hstk" src="https://files.slack.com/files-pri/T677SKL4E-F6D3AQMTP/panda_.png" alt="panda icon">
     </div>
     <!-- <div id="drag-36" class="draggable stack8">
       <img class="hstk" src="https://cdn.shopify.com/s/files/1/0741/5537/t/17/assets/hand_drawn_x-black.png?9061240056485740307" alt="x icon">
