--- a/blt.html
+++ b/blt.html
@@ -1,4 +1,5 @@
 <head>
+  <title>Day View</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>
     function allowDrop(ev) {
